--- a/auto.html
+++ b/auto.html
@@ -70,9 +70,8 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active"><a href="index.html" class="nav-link pl-0">Inicio</a></li>
-            <li class="nav-item"><a href="about.html" class="nav-link">Nosotros</a></li>
-            <li class="nav-item"><a href="services.html" class="nav-link">Productos</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
+            <li class="nav-item"><a href="nosotros.html" class="nav-link">Nosotros</a></li>
+            <li class="nav-item"><a href="productos.html" class="nav-link">Productos</a></li>
           </ul>
         </div>
       </div>
