--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<div class="col-md topper d-flex align-items-center justify-content-end">
 							<p class="mb-0 d-block">
 								<a href="#" class="btn py-2 px-3 btn-primary">
-									<span>Pedí hoy tu cotización</span>
+									<span>Escribinos</span>
 								</a>
 							</p>
 						</div>
@@ -73,10 +73,18 @@
 			</button>
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active"><a href="index.html" class="nav-link pl-0">Inicio</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link">Nosotros</a></li>
-					<li class="nav-item"><a href="services.html" class="nav-link">Productos</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
+					<li class="nav-item"><a href="index.html" class="nav-link pl-0">Inicio</a></li>
+					<li class="nav-item"><a href="nosotros.html" class="nav-link">Nosotros</a></li>
+					<li class="nav-item"><a href="productos.html" class="nav-link">Productos</a></li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						  Pedí tu cotización
+						</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+						  <li><a class="dropdown-item" href="formulario-auto.html">Formulario Auto</a></li>
+						  <li><a class="dropdown-item" href="formulario-casa.html">Formulario Casa</a></li>
+						</ul>
+					<li class="nav-item"><a href="#contacto" class="nav-link">Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -93,7 +101,7 @@
 					<div class="col-md-7 ftco-animate">
 						<span class="subheading">Bienvenido a Puerto Nuevo</span>
 						<h1 class="mb-4">Vos disfrutá, <br>Nosotros te aseguramos.</h1>
-						<p><a href="#" class="btn btn-primary px-4 py-3 mt-3">Ver Productos</a></p>
+						<p><a href="/productos.html" class="btn btn-secondary px-4 py-3 mt-3">Ver Productos</a></p>
 					</div>
 				</div>
 			</div>
@@ -144,7 +152,7 @@
 										class="flaticon-collaboration"></span></div>
 								<div class="text media-body">
 									<h3>Organización</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
+									<p>Para garantizar tu tranquilidad, nosotros nos encargamos de las gestiones de tus pólizas.</p>
 								</div>
 							</div>
 							<div class="services text-center">
@@ -152,7 +160,7 @@
 										class="flaticon-analysis"></span></div>
 								<div class="text media-body">
 									<h3>Análisis de Riesgos</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
+									<p>Te asesoramos de la mejor manera, para que tus riesgos esten bien asegurados.</p>
 								</div>
 							</div>
 						</div>
@@ -162,7 +170,7 @@
 										class="flaticon-search-engine"></span></div>
 								<div class="text media-body">
 									<h3>Costos Imbatibles</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
+									<p>Analizamos el mercado en busca de la mejor cobertura al mejor precio.</p>
 								</div>
 							</div>
 							<div class="services text-center">
@@ -170,7 +178,7 @@
 										class="flaticon-handshake"></span></div>
 								<div class="text media-body">
 									<h3>Nativos Digitales</h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
+									<p>Tené todas tus pólizas siempre actualizadas al alcance de tu mano.</p>
 								</div>
 							</div>
 						</div>
@@ -187,52 +195,6 @@
 			<div class="row justify-content-center mb-5">
 				<div class="col-md-10 text-center heading-section heading-section-white ftco-animate">
 					<h2 class="mb-0">El mejor asesoramiento al alcance de tu mano</h2>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="ftco-counter" id="section-counter">
-		<div class="container">
-			<div class="row d-md-flex align-items-center justify-content-center">
-				<div class="wrapper">
-					<div class="row d-md-flex align-items-center">
-						<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-							<div class="block-18">
-								<div class="icon"><span class="flaticon-doctor"></span></div>
-								<div class="text">
-									<strong class="number" data-number="652">0</strong>
-									<span>Cotizaciones realizadas</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-							<div class="block-18">
-								<div class="icon"><span class="flaticon-doctor"></span></div>
-								<div class="text">
-									<strong class="number" data-number="365">0</strong>
-									<span>Clientes satisfechos</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-							<div class="block-18">
-								<div class="icon"><span class="flaticon-doctor"></span></div>
-								<div class="text">
-									<strong class="number" data-number="535">0</strong>
-									<span>Pólizas emitidas</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-							<div class="block-18">
-								<div class="icon"><span class="flaticon-doctor"></span></div>
-								<div class="text">
-									<strong class="number" data-number="10">0</strong>
-									<span>Años en el rubro</span>
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -257,6 +219,8 @@
 							<h3>Hogar</h3>
 							<p>Porque sabemos que cada hogar es diferente y merece un seguro único y a medida,
 								te ofrecemos seguridad y respaldo ante los imprevistos que sufra tu propiedad.</p>
+								<p><a href="/productos.html" class="btn btn-secondary px-4 py-3 mt-3">Ver Productos</a></p>
+
 						</div>
 					</div>
 				</div>
@@ -266,7 +230,8 @@
 						<div class="text media-body">
 							<h3>Automotores</h3>
 							<p>Conocemos la comodidad e independencia personal que generan los
-								automóviles. Por ello te garantizamos confianza y tranquilidad.</p>
+								automóviles. Por eso mismo te garantizamos total confianza y tranquilidad.</p>
+								<p><a href="/productos.html" class="btn btn-secondary px-4 py-3 mt-3">Ver Productos</a></p>
 						</div>
 					</div>
 				</div>
@@ -276,7 +241,8 @@
 						<div class="text media-body">
 							<h3>Empresas y PYMES</h3>
 							<p>El equipamiento en general representa un valor fundamental en el
-								patrimonio de un comercio o empresa. Ofrecemos confianza y protección total.</p>
+								patrimonio de un comercio o empresa. Ofrecemos para tu negocio confianza y protección total.</p>
+								<p><a href="/productos.html" class="btn btn-secondary px-4 py-3 mt-3">Ver Productos</a></p>
 						</div>
 					</div>
 				</div>
@@ -285,9 +251,9 @@
 						<div class="icon mt-2 d-flex justify-content-center align-items-center"><img src="/images/iconos/harvest.png" alt=""></span></div>
 						<div class="text media-body">
 							<h3>Agro</h3>
-							<p>Porque conocemos el sacrificio que implica
-								mantener viva la producción de tu campo, como pioneros y mentores, te brindamos respaldo,
+							<p>Como pioneros y mentores, te brindamos respaldo,
 								asesoramiento y la más alta protección ante los daños que puedan perjudicarlos.</p>
+								<p><a href="/productos.html" class="btn btn-secondary px-4 py-3 mt-3">Ver Productos</a></p>
 						</div>
 					</div>
 				</div>
@@ -298,7 +264,9 @@
 							<h3>Accidentes Personales</h3>
 							<p>Pensado para trabajadores qué en su actividad profesional o
 								comercial, un accidente puede repercutir directamente en su economía personal y/o familiar</p>
-						</div>
+								<p><a href="/productos.html" class="btn btn-primary px-4 py-3 mt-3">Ver Productos</a></p>
+
+							</div>
 					</div>
 				</div>
 				<div class="col-lg-4 d-flex">
@@ -307,10 +275,9 @@
 						<div class="text media-body">
 							<h3>Prevención Salud</h3>
 							<p>Nacimos para cuidarte y elevar tu calidad de vida. Estaremos aquí
-								cuando nos necesites, dándote respuestas ágiles con la mejor calidad de atención y un servicio
+								cuando nos necesites, dándote respuestas ágiles con un servicio
 								prestacional de excelencia.</p>
-						</div>
-					</div>
+								<button type="button" class="btn btn-outline-primary">Primary</button>					</div>
 				</div>
 			</div>
 		</div>
@@ -413,6 +380,11 @@
 				<div class="col-md-12 col-lg-4">
 					<div class="ftco-footer-widget mb-5 ml-md-4">
 						<a href="https://www.argentina.gob.ar/superintendencia-de-seguros"><img src="/images/ssn.png" alt=""></a>
+					</div>
+					<div class="ftco-footer-widget mb-5 ml-md-4">
+						<            <a href="http://qr.afip.gob.ar/?qr=gVuee1JBbLotYYZs3Who3A,," target="_F960AFIPInfo"><img src="http://www.afip.gob.ar/images/f960/DATAWEB.jpg" border="0" width="50"></a>
+						<a href="http://qr.afip.gob.ar/?qr=gVuee1JBbLotYYZs3Who3A,," target="_F960AFIPInfo"><img src="http://www.afip.gob.ar/images/f960/DATAWEB.jpg" border="0" width="50"></a>
+			
 					</div>
 				</div>
 
