--- a/nosotros.html
+++ b/nosotros.html
@@ -75,8 +75,8 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active"><a href="index.html" class="nav-link pl-0">Inicio</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">Nosotros</a></li>
-          <li class="nav-item"><a href="services.html" class="nav-link">Productos</a></li>
+          <li class="nav-item"><a href="nosotros.html" class="nav-link">Nosotros</a></li>
+          <li class="nav-item"><a href="productos.html" class="nav-link">Productos</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
         </ul>
       </div>
@@ -288,6 +288,9 @@
           <div class="ftco-footer-widget mb-5 ml-md-4">
             <a href="https://www.argentina.gob.ar/superintendencia-de-seguros"><img src="/images/ssn.png" alt=""></a>
           </div>
+
+          <a href="http://qr.afip.gob.ar/?qr=gVuee1JBbLotYYZs3Who3A,," target="_F960AFIPInfo"><img src="http://www.afip.gob.ar/images/f960/DATAWEB.jpg" border="0" width="50"></a>
+
         </div>
 
         <div class="col-md-12 col-lg-4">
